# why2025-badge-console

./: .env  .gitignore  Cargo.toml  Makefile  build.rs
.cargo/: config.toml
scripts/: bump.sh  package.sh  publish.sh
src/: badgevms.rs  main.rs
