[package]
name = "console"
version = "0.0.1"
edition = "2024"
authors = ["chonk"]

[dependencies]
why2025-badge-sys = "0.2.0"

[build-dependencies]
cargo-util-schemas = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
toml = { version = "0.9.5", features = ["serde", "parse"] }
